Uploaded image for project: 'Mesos'
  1. Mesos
  2. MESOS-7225

Tasks launched via the default executor cannot access disk resource volumes.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 1.3.0
    • None
    • Mesosphere Sprint 52, Mesosphere Sprint 53
    • 3

    Description

      Currently, when a task in a task group tries to access a volume specified in disk resources (e.g., persistent volumes), it doesn't have access to them since they are mounted in the root container (executor). This happens due to there being no mechanism to specify resources for child containers yet. Hence, by default any resources (e.g., disk) are added to the root container.

      A possible solution can be to set up the mapping manually by the default executor using the SANDBOX_PATH volume source type giving child containers access to the volume mounted in the parent container. This is at best a workaround and the ideal solution would be tackled as part of MESOS-7207.

      Attachments

        Activity

          People

            anandmazumdar Anand Mazumdar
            anandmazumdar Anand Mazumdar
            Vinod Kone Vinod Kone
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: